src/test/ui/error-codes/E0504.nll.stderr
error[E0505]: cannot move out of `fancy_num` because it is borrowed
  --> $DIR/E0504.rs:19:13
   |
LL |       let fancy_ref = &fancy_num;
   |                       ---------- borrow of `fancy_num` occurs here
LL | 
LL |       let x = move || {
   |  _____________^
LL | |         println!("child function: {}", fancy_num.num); //~ ERROR E0504
LL | |     };
   | |_____^ move out of `fancy_num` occurs here
...
LL |       println!("main function: {}", fancy_ref.num);
   |                                     ------------- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
